[gd_scene load_steps=11 format=3 uid="uid://6eoclhsx0qae"]

[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://lobby/theme/MinimalUI.tres" id="1_42wu0"]
[ext_resource type="Script" uid="uid://5a0hl5vi0f3x" path="res://lobby/lobby_quick_connect.gd" id="2_5djwk"]
[ext_resource type="StyleBox" uid="uid://dltee5tb5lpnf" path="res://lobby/theme/lobby_panel_container_styleboxflat.tres" id="3_fhgty"]
[ext_resource type="Shader" uid="uid://cejq1gisa18xi" path="res://lobby/theme/background.gdshader" id="3_x0kp3"]
[ext_resource type="PackedScene" uid="uid://cr0rjm7booup1" path="res://lobby/lobby_color_grid/lobby_color_grid.tscn" id="5_kaq8o"]
[ext_resource type="PackedScene" uid="uid://b5bs8xlgxmi3q" path="res://lobby/lobby_chat/lobby_chat.tscn" id="6_qwr24"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kaq8o"]
shader = ExtResource("3_x0kp3")
shader_parameter/stretch = 0.8
shader_parameter/thing1 = 0.30000000447036
shader_parameter/thing2 = 0.20000000298024
shader_parameter/thing3 = 1.0000000149012
shader_parameter/scale = 1.0
shader_parameter/speed = 20.00000095

[sub_resource type="Gradient" id="Gradient_a04cy"]
offsets = PackedFloat32Array(0.66504854, 0.7184466)
colors = PackedColorArray(0.4, 0.4, 0.4, 1, 0.4, 0.4, 0.4, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3huwn"]
gradient = SubResource("Gradient_a04cy")
width = 25
height = 25
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3huwn"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="LobbyQuickConnect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_42wu0")
script = ExtResource("2_5djwk")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(6.136671e-06, 0.11346211, 0.37426347, 1)

[node name="Shader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kaq8o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="ColumnQuickConnect" type="PanelContainer" parent="Margin/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(425, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("3_fhgty")

[node name="MarginContainer" type="MarginContainer" parent="Margin/HBoxContainer/ColumnQuickConnect"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer2" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer"]
layout_mode = 2

[node name="HBoxConnect" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/HBoxConnect"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connect"

[node name="ConnectionLight" type="TextureRect" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/HBoxConnect"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("GradientTexture2D_3huwn")

[node name="InputUsername" type="LineEdit" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Username"

[node name="VBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputCode" type="LineEdit" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Lobby Code"

[node name="ButtonPaste" type="Button" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer/HBoxContainer/InputCode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -10.0
offset_right = -4.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_3huwn")
text = "Paste"

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="ButtonQuickJoin" type="Button" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Join"

[node name="ButtonQuickHost" type="Button" parent="Margin/HBoxContainer/ColumnQuickConnect/MarginContainer/HBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host"

[node name="ColumnLobby" type="PanelContainer" parent="Margin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_fhgty")

[node name="LobbyVBox" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby"]
layout_mode = 2

[node name="LobbyTop" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxCode" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop"]
layout_mode = 2

[node name="LabelLobbyTitle" type="Label" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxCode"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LOBBY_PLACEHOLDER"

[node name="H" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxCode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputLobbyCopy" type="LineEdit" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxCode/H"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
editable = false
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="ButtonCopy" type="Button" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxCode/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Copy Code"

[node name="ButtonLobbyLeave" type="Button" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxCode"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "   Leave Lobby   "

[node name="Vbox" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorGrid" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer/VBoxContainer" instance=ExtResource("5_kaq8o")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 21
text = "Players:"

[node name="LobbyUserList" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="V" type="VBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer/V"]
visible = false
layout_mode = 2

[node name="LobbyChat" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/Vbox/HBoxContainer/V" instance=ExtResource("6_qwr24")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonLobbyStart" type="Button" parent="Margin/HBoxContainer/ColumnLobby/LobbyVBox/LobbyTop/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Start Game"
